--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "joi": "^13.4.0",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-csrf": "^3.0.6",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
