--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/FTChinese/next-myft#readme",
   "dependencies": {
+    "csrf": "^3.0.6",
     "debug": "^3.1.0",
     "html-minifier": "^3.5.16",
     "inline-source": "^6.1.5",
@@ -28,7 +29,6 @@
     "joi": "^13.4.0",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-csrf": "^3.0.6",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
